[tool.poetry]
name = "mbdata"
version = "26.0.1"
description = ""
authors = ["Lukáš Lalinský <lalinsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7.18"
SQLAlchemy = {version = "^1.4.29", optional = true}
lxml = {version = "^4.7.1", optional = true}
psycopg2 = {version = "^2.8.6", optional = true}
six = "^1.16.0"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
flake8 = "^3.8.4"
psycopg2 = "^2.8.6"
sqlparse = "^0.3.1"

[tool.poetry.extras]
replication = ["psycopg2"]
search = ["lxml"]
models = ["SQLAlchemy"]

[tool.poetry.scripts]
mbslave = "mbdata.replication:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
